# sherlock

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE-APACHE  LICENSE-MIT  README.md
.cargo/: config.toml
analyzer/: Cargo.toml
analyzer/examples/: dump.rs
analyzer/src/: dashboard.rs  main.rs  resolver.rs  state.rs  tracker.rs
docs/: USAGE.md
profiler/: Cargo.toml
profiler/src/: lib.rs
profiler/src/injection/: mod.rs
profiler/src/ring_buffer/: mod.rs
sherlock/: Cargo.toml
sherlock/src/: main.rs
testing/: README.md  bursts.c  cpp_workload.cpp  crash_uaf.c  flame.c  leaks.c  mixed.c  webserver_sim.c
